--- a/Northwind/Northwind.Interfaces/Northwind.Interfaces.csproj
+++ b/Northwind/Northwind.Interfaces/Northwind.Interfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{06486B07-873F-4C86-AA81-9A9196053859}</ProjectGuid>
+    <ProjectGuid>{2729B38C-7699-4F68-A9AA-5660D5AA658C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Northwind.BLL</RootNamespace>
-    <AssemblyName>Northwind.BLL</AssemblyName>
+    <RootNamespace>Northwind.Interfaces</RootNamespace>
+    <AssemblyName>Northwind.Interfaces</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,24 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Concrete\ProductManager.cs" />
+    <Compile Include="IProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Abstract\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Northwind.DAL\Northwind.DAL.csproj">
-      <Project>{3EA5CF29-24C0-4EB8-A94B-3F0D73AA8321}</Project>
-      <Name>Northwind.DAL</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Northwind.Entities\Northwind.Entities.csproj">
       <Project>{1ABCE987-2258-4F09-8D34-A5B89BC4CD09}</Project>
       <Name>Northwind.Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Northwind.Interfaces\Northwind.Interfaces.csproj">
-      <Project>{2729B38C-7699-4F68-A9AA-5660D5AA658C}</Project>
-      <Name>Northwind.Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
