--- a/Northwind/Northwind.WcfIISHost/Web.config
+++ b/Northwind/Northwind.WcfIISHost/Web.config
@@ -5,7 +5,7 @@
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="false" targetFramework="4.6.1" />
+    <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
   <system.serviceModel>
@@ -21,8 +21,12 @@
     </behaviors>
     <protocolMapping>
         <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    </protocolMapping>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" >
+      <serviceActivations>
+        <add service="Northwind.WcgLibrary.Concrete.ProductService" relativeAddress="Product.svc"/>
+      </serviceActivations>
+    </serviceHostingEnvironment>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
